--- a/.gitattributes
+++ b/.gitattributes
@@ -15,4 +15,4 @@
 *.dylib filter=lfs diff=lfs merge=lfs -text
 *.lib filter=lfs diff=lfs merge=lfs -text
 *.a filter=lfs diff=lfs merge=lfs -text
-src/main/resources/icons text -filter -merge -diff
+src/main/resources/icons/** !filter !merge !diff
