--- a/.gitattributes
+++ b/.gitattributes
@@ -16,3 +16,4 @@
 *.lib filter=lfs diff=lfs merge=lfs -text
 *.a filter=lfs diff=lfs merge=lfs -text
 src/main/resources/icons/** !filter !merge !diff
+shows/pilots/*d_*m_*y_master.vzr filter=lfs diff=lfs merge=lfs -text
