--- a/build.gradle
+++ b/build.gradle
@@ -193,6 +193,7 @@ task buildAndRunUIv2(type: JavaExec) {
 task runUIv2(type: JavaExec) {
 	if (System.properties["os.name"] == "Mac OS X") {
 		jvmArgs '-XstartOnFirstThread'
+        systemProperty 'java.awt.headless', true
 	}
 
 	systemProperty 'org.lwjgl.util.Debug', true
