--- a/.gitattributes
+++ b/.gitattributes
@@ -15,4 +15,5 @@
 *.dylib filter=lfs diff=lfs merge=lfs -text
 *.lib filter=lfs diff=lfs merge=lfs -text
 *.a filter=lfs diff=lfs merge=lfs -text
+*.ttf filter=lfs diff=lfs merge=lfs -text
 src/main/resources/icons/** !filter !merge !diff
