--- a/build.gradle
+++ b/build.gradle
@@ -104,6 +104,11 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-math3
 	implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 
+    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
+
+    implementation group: 'ar.com.hjg', name: 'pngj', version: '2.1.0'
+
+
 	// https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib
 	implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.2.60'
 
