start importing japan tree work from master

--- a/build.gradle
+++ b/build.gradle
@@ -142,6 +142,7 @@ dependencies {
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.1'
 
 	implementation group: 'de.javagl', name: 'obj', version: '0.3.0'
+    implementation group: 'org.smurn', name: 'jply', version: '0.2.0'
 
 	testCompile 'junit:junit:4.12'
 }
