--- a/build.gradle
+++ b/build.gradle
@@ -86,73 +86,37 @@ repositories {
 }
 
 dependencies {
-	// https://mvnrepository.com/artifact/org.processing/core
-	implementation group: 'org.processing', name: 'core', version: '3.3.6'
-
-	// https://mvnrepository.com/artifact/org.processing/video
-	implementation group: 'org.processing', name: 'video', version: '3.2.3'
-
-	// https://mvnrepository.com/artifact/com.google.code.gson/gson
-	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
-
-	// https://mvnrepository.com/artifact/com.harium/kdtree
-	implementation group: 'com.harium', name: 'kdtree', version: '1.0.0'
-
-	// https://mvnrepository.com/artifact/org.javassist/javassist
-	implementation group: 'org.javassist', name: 'javassist', version: '3.22.0-GA'
-
-	// https://mvnrepository.com/artifact/com.google.guava/guava
-	implementation group: 'com.google.guava', name: 'guava', version: '23.5-jre'
-
-	// https://mvnrepository.com/artifact/org.apache.commons/commons-math3
-	implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-	implementation group: 'commons-io', name: 'commons-io', version: '2.6'
-
-	// https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib
-	implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.2.60'
-
-	// https://mvnrepository.com/artifact/io.github.lukehutch/fast-classpath-scanner
-	implementation group: 'io.github.lukehutch', name: 'fast-classpath-scanner', version: '2.9.3'
-
-	// lock aparapi-jni snapshot version
-	// https://oss.sonatype.org/content/repositories/snapshots/com/aparapi/aparapi-jni/
-	implementation "com.aparapi:aparapi-jni:1.1.3-20180211.063116-7"
-
-	// https://github.com/SymmetryLabs/aparapi
-	implementation 'com.github.SymmetryLabs:aparapi:b6fffad'
-
+	implementation "com.aparapi:aparapi-jni:1.1.3-20180211.063116-7" // lock aparapi-jni snapshot version
+	implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
+	implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
 	implementation 'com.fazecast:jSerialComm:[2.0.0,3.0.0)'
-
-	// https://github.com/SymmetryLabs/ArtNetStack
 	implementation 'com.github.SymmetryLabs:ArtNetStack:44ddfed'
-
-	// https://mvnrepository.com/artifact/uk.co.xfactory-librarians/coremidi4j
-	implementation group: 'uk.co.xfactory-librarians', name: 'coremidi4j', version: '0.9'
-
-	// http://mvnrepository.com/artifact/uk.co.caprica/vlcj
-	// http://capricasoftware.co.uk/#/projects/vlcj
-	implementation group: 'uk.co.caprica', name: 'vlcj', version: '3.10.1'
-
-	// https://mvnrepository.com/artifact/org.slf4j/slf4j-simple/1.7.25
-	// used for logging in vlcj, for more information about why this dependency
-	// is declared here instead of vlcj (which is intentional!) check out
-	// https://www.slf4j.org/manual.html
+	implementation 'com.github.SymmetryLabs:aparapi:b6fffad'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+	implementation group: 'com.google.guava', name: 'guava', version: '23.5-jre'
+	implementation group: 'com.harium', name: 'kdtree', version: '1.0.0'
+	implementation group: 'commons-io', name: 'commons-io', version: '2.6'
+	implementation group: 'de.javagl', name: 'obj', version: '0.3.0'
+	implementation group: 'io.github.lukehutch', name: 'fast-classpath-scanner', version: '2.9.3'
+	implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+	implementation group: 'org.javassist', name: 'javassist', version: '3.22.0-GA'
+	implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.2.60'
+	implementation group: 'org.processing', name: 'core', version: '3.3.6'
+	implementation group: 'org.processing', name: 'video', version: '3.2.3'
+    /* used for logging in vlcj, for more information about why this dependency
+       is declared here instead of vlcj (which is intentional!) check out
+       https://www.slf4j.org/manual.html */
 	implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+	implementation group: 'uk.co.caprica', name: 'vlcj', version: '3.10.1'
+	implementation group: 'uk.co.xfactory-librarians', name: 'coremidi4j', version: '0.9'
+    implementation group: 'org.smurn', name: 'jply', version: '0.2.0'
 
 	implementation files('libs/minim.jar')
 	implementation files('libs/jogamp-fat.jar')
 
-	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.1'
-
-	implementation group: 'de.javagl', name: 'obj', version: '0.3.0'
-
-    implementation group: 'org.smurn', name: 'jply', version: '0.2.0'
-
 	testCompile 'junit:junit:4.12'
 
-	implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
-	implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
 }
 
 compileKotlin {
