--- a/build.gradle
+++ b/build.gradle
@@ -110,6 +110,7 @@ dependencies {
 	implementation group: 'uk.co.caprica', name: 'vlcj', version: '3.10.1'
 	implementation group: 'uk.co.xfactory-librarians', name: 'coremidi4j', version: '0.9'
     implementation group: 'org.smurn', name: 'jply', version: '0.2.0'
+    implementation group: 'joda-time', name: 'joda-time', version: '2.10.1'
 
 	implementation files('libs/minim.jar')
 	implementation files('libs/jogamp-fat.jar')
