--- a/build.gradle
+++ b/build.gradle
@@ -211,3 +211,9 @@ task dist(type: Zip) {
   }
   into "SLStudio-" + project.version
 }
+
+tasks.withType(Javadoc) {
+    options.with {
+        links "https://docs.oracle.com/javase/8/docs/api/"
+    }
+}
