--- a/build.gradle
+++ b/build.gradle
@@ -112,6 +112,7 @@ dependencies {
 	implementation group: 'uk.co.xfactory-librarians', name: 'coremidi4j', version: '0.9'
     implementation group: 'org.smurn', name: 'jply', version: '0.2.0'
     implementation group: 'joda-time', name: 'joda-time', version: '2.10.1'
+    implementation group: 'net.dongliu', name: 'gson-java8-datatype', version: '1.1.0'
 
 	implementation files('libs/minim.jar')
 	implementation files('libs/jogamp-fat.jar')
