--- a/build.gradle
+++ b/build.gradle
@@ -129,6 +129,13 @@ compileTestKotlin {
 	kotlinOptions.jvmTarget = "1.8"
 }
 
+test {
+    testLogging {
+        showStandardStreams = true
+        exceptionFormat = "full"
+    }
+}
+
 jar {
 	exclude('**/*.swp')
 	exclude('**/*.swo')
