display successful test results as well

--- a/build.gradle
+++ b/build.gradle
@@ -131,6 +131,7 @@ compileTestKotlin {
 
 test {
     testLogging {
+        events "passed", "failed", "skipped"
         showStandardStreams = true
         exceptionFormat = "full"
     }
